--- a/.github/workflows/clone-build-package.yml
+++ b/.github/workflows/clone-build-package.yml
@@ -12,6 +12,8 @@ jobs:
     name: Clone, build, and package
     runs-on: macos-10.15
     steps:
+      - name: install Ninja
+        run: brew install ninja
       - name: checkout build-llvm
         uses: actions/checkout@v2
       - name: checkout llvm-project
